--- a/kafka-test-consumer/src/main/resources/application-dev.properties
+++ b/kafka-test-consumer/src/main/resources/application-dev.properties
@@ -9,4 +9,4 @@ spring.kafka.consumer.group-id=${username:test}-group-id
 spring.data.mongodb.database=kafka_test
 spring.data.mongodb.password=kafkapassword
 spring.data.mongodb.username=kafka
-spring.data.mongodb.host=54.209.208.130
+spring.data.mongodb.host=
