--- a/kafka-test-consumer/src/main/resources/application-generic.properties
+++ b/kafka-test-consumer/src/main/resources/application-generic.properties
@@ -39,12 +39,10 @@ spring.data.mongodb.uri=mongodb://${spring.data.mongodb.username}:${spring.data.
 #======================AWS Config ==========================
 #cloud.aws.region.static=us-west-2
 cloud.aws.region.static=us-east-1
-#cloud.aws.credentials.accessKey=AKIAJSOB7GKKDZGYBMLA
-#cloud.aws.credentials.secretKey=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
-#"AKIAJ74VVUUG6WGYX5PA", "XrL1hc3n7pet+6HJntn2e7tj3mJ9GNWYCuJZ7z0f");
 
-cloud.aws.credentials.accessKey=AKIAJ74VVUUG6WGYX5PA
-cloud.aws.credentials.secretKey=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
+
+cloud.aws.credentials.accessKey=
+cloud.aws.credentials.secretKey=
 
 cloud.aws.credentials.instanceProfile=false
 cloud.aws.stack.auto= false
