--- a/kafka-test-producer/src/main/resources/application-generic.properties
+++ b/kafka-test-producer/src/main/resources/application-generic.properties
@@ -37,8 +37,8 @@ session.timeout.ms=15000
 
 #======================AWS Config ==========================
 cloud.aws.region.static=us-east-1
-cloud.aws.credentials.accessKey=AKIAJSOB7GKKDZGYBMLA
-cloud.aws.credentials.secretKey=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
+cloud.aws.credentials.accessKey=
+cloud.aws.credentials.secretKey=
 cloud.aws.credentials.instanceProfile=false
 cloud.aws.stack.auto= false
 
