--- a/sns-test-producer/src/main/resources/application-sandbox.properties
+++ b/sns-test-producer/src/main/resources/application-sandbox.properties
@@ -5,8 +5,8 @@ aws.credentials.accessKey=${SB_AWS_ACCESS_KEY_ID}
 aws.credentials.secretKey=${SB_AWS_SECRET_ACCESS_KEY}
 
 
-#aws.sns.topic=arn:aws:sns:eu-central-1:157159589210:edi-job-status
-aws.sns.topic=arn:aws:sns:eu-central-1:157159589210:sgeorge-dr-perf-job-status
+
+aws.sns.topic=
 local-configuration.aws.credentialProvider.enabled=false
 
 local-configuration.aws.enabled=false
@@ -14,4 +14,4 @@ local-configuration.aws.enabled=false
 
 aws.region=eu-central-1
 
-sns.topic.custom=arn:aws:sns:eu-central-1:157159589210:provision_x1
+sns.topic.custom=
