--- a/sns-test-producer/src/main/resources/application-vagrant.properties
+++ b/sns-test-producer/src/main/resources/application-vagrant.properties
@@ -2,19 +2,11 @@
 # Sandbox Account. edt-dev-vt
 
 #aws.credentials.accessKey=${AWS_ACCESS_KEY_ID}
-#aws.credentials.accessKey=AKIA37YJOD3IKVPVKW7R
+#aws.credentials.accessKey=
 #aws.credentials.secretKey=${AWS_SECRET_ACCESS_KEY}
-#aws.credentials.secretKey=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
+#aws.credentials.secretKey=
 
-# Sandbox
-#aws.sns.topic=arn:aws:sns:eu-central-1:157159589210:edi-test
-# Local SNS
-#sns.local=arn:aws:sns:eu-central-1:123456789012
-#sns.local=arn:aws:sns:eu-central-1:000000000000
-#aws.sns.topic=arn:aws:sns:eu-central-1:123456789012:job-status
-#aws.sns.topic=arn:aws:sns:eu-central-1:123456789012:schema-extractor-file-converter
-#aws.sns.topic=arn:aws:sns:eu-central-1:123456789012:data-ingest-file-converter
-#aws.sns.topic=arn:aws:sns:${edi.region}:${account}:job-status
+
 aws.sns.topic=arn:aws:sns:${aws.region}:${aws.account}:data-ingest-file-converter
 local-configuration.aws.credentialProvider.enabled = true
 
@@ -28,5 +20,5 @@ aws.sns.url=http://${aws.server}:4575
 aws.account=1234567890
 
 aws.sns.topic.dataInject=arn:aws:sns:${aws.region}:${aws.account}:data-ingest-file-converter
-#aws.sns.topic.jobStatusTopic=arn:aws:sns:eu-central-1:123456789012:job-status
+
 sns.topic.custom=arn:aws:sns:${aws.region}:${aws.account}:job-status-failure
