--- a/kafka-test-producer/src/main/resources/application-dev.properties
+++ b/kafka-test-producer/src/main/resources/application-dev.properties
@@ -7,4 +7,4 @@ spring.kafka.template.default-topic=${username}-kafka-test
 spring.data.mongodb.database=kafka_test
 spring.data.mongodb.password=kafkapassword
 spring.data.mongodb.username=kafka
-spring.data.mongodb.host=54.209.208.130
+spring.data.mongodb.host=
